--- a/index.html
+++ b/index.html
@@ -37,12 +37,6 @@
     </div>
 
     <script>
-        if ('serviceWorker' in navigator) {
-            window.addEventListener('load', () => {
-                navigator.serviceWorker.register('./assets/sw.js');
-            });
-        }
-
         function renderRepo(repo) {
             return `
                 <a href="${repo.html_url}" target="_blank" rel="noopener">
@@ -74,6 +68,7 @@
             ${user.location ? '<span style="display:block;"><i class="fas fa-map-marker-alt"></i> ' + user.location + '</span>' : ""}
             ${user.hireable ? '<span style="display:block;"><i class="fas fa-user-tie"></i> &nbsp;&nbsp; Available for hire</span>' : ""}`;
             document.head.innerHTML += `<meta name="description" content="${user.bio}">`;
+            document.title = user.name;
         });
         fetch(`https://api.github.com/search/repositories?q=user:${username} fork:false&sort=stars`).then(response => response.json()).then(repositories => {
             repositoriesDom = document.getElementById('work_section');
