--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="theme-color" content="#000000" />
+    <meta name="description" content="">
+
+    <link rel="shortcut icon" type="image/png" />
 
     <link rel="preconnect" href="https://api.github.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+
     <link rel="stylesheet" href="./assets/index.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Questrial">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
@@ -49,9 +53,9 @@
                             <span style="display:block;">${repo.description}</span>
                         </div>
                         <div class="bottom_section">
-                            <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; ${repo.language}</span>
-                            <span><i class="fas fa-star"></i>&nbsp; ${repo.stargazers_count}</span>
-                            <span><i class="fas fa-code-branch"></i>&nbsp; ${repo.forks}</span>
+                            <span style="display:inline-block;"><i class="fas fa-code"></i> ${repo.language}</span>
+                            <span><i class="fas fa-star"></i> ${repo.stargazers_count}</span>
+                            <span><i class="fas fa-code-branch"></i> ${repo.forks}</span>
                         </div>
                     </section>
                 </a>`
@@ -63,20 +67,21 @@
 
         // Fetches data about user itself to render left side of page.
         fetch(`https://api.github.com/users/${username}`).then(response => response.json()).then(user => {
+            document.title = user.name;
+            document.querySelector("meta[name='description']").setAttribute("content", user.bio);
+            document.querySelector("link[rel='shortcut icon']").setAttribute("href", user.avatar_url);
             document.getElementById('profile_img').style = `background: url(${user.avatar_url}) center;`;
-            document.getElementById('username').innerHTML = `<span style="display:block;">${user.name}</span>${user.login}`;
+            document.getElementById('username').innerHTML = `<span style="display:block;">${user.name}</span>@${user.login}`;
             document.getElementById('userbio').innerHTML = user.bio;
             document.getElementById('about').innerHTML = `
             ${user.company ? '<span style="display:block;"><i class="fas fa-users"></i> ' + user.company + '</span>' : ""}
             ${user.email ? '<span style="display:block;"><i class="fas fa-envelope"></i> ' + user.email + '</span>' : ""}
             ${user.blog ? '<span style="display:block;"><i class="fas fa-link"></i> ' + user.blog + '</span>' : ""}
             ${user.location ? '<span style="display:block;"><i class="fas fa-map-marker-alt"></i> ' + user.location + '</span>' : ""}
-            ${user.hireable ? '<span style="display:block;"><i class="fas fa-user-tie"></i> &nbsp;&nbsp; Available for hire</span>' : ""}`;
-            document.head.innerHTML += `<meta name="description" content="${user.bio}">`;
-            document.title = user.name;
+            ${user.hireable ? '<span style="display:block;"><i class="fas fa-user-tie"></i> Available for hire</span>' : ""}`;
         });
 
-        // Fetches only non-fork repos sorted by star count.
+        // Fetches only non-fork repositories sorted by star count.
         fetch(`https://api.github.com/search/repositories?q=user:${username} fork:false&sort=stars`).then(response => response.json()).then(repositories => {
             repositoriesDom = document.getElementById('work_section');
             if (!repositories.total_count)
@@ -86,7 +91,7 @@
             });
         });
 
-        // Fetches only fork repos sorted by star count.
+        // Fetches only fork repositories sorted by star count.
         fetch(`https://api.github.com/search/repositories?q=user:${username} fork:only&sort=stars`).then(response => response.json()).then(forks => {
             forksDom = document.getElementById('forks_section');
             if (!forks.total_count)
